--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^7.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
@@ -22,6 +23,7 @@
     "helmet": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
+    "redis": "^4.7.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
