railway db test

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DB_HOST=localhost
+DB_HOST=mysql://root:xqffKvbCAynEjhapORfVplHqaODOMQKo@junction.proxy.rlwy.net:22113/railway
 DB_USER=root
 DB_PASSWORD=supernova
 DB_NAME=representacionesv2
-REDIS_URL=redis://localhost:6379
