--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST=mysql://root:xqffKvbCAynEjhapORfVplHqaODOMQKo@junction.proxy.rlwy.net:22113/railway
+DB_HOST=junction.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=supernova
-DB_NAME=representacionesv2
+DB_PASSWORD=xqffKvbCAynEjhapORfVplHqaODOMQKo
+DB_NAME=railway
+DB_PORT=22113
