error en db fixed

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=junction.proxy.rlwy.net
+DB_HOST=autorack.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=xqffKvbCAynEjhapORfVplHqaODOMQKo
-DB_NAME=railway
-DB_PORT=22113
+DB_PASSWORD=dVUqPIrgSAnrfbVizKFShwlUAvIFuAWm
+DB_NAME=representacionesv2
+DB_PORT=15694
